--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <h1>¿Qué podría hacer yo si fuera valiente?</h1>
     
     <p>Si tuviera toda la valentía del mundo, yo...</p>
-    <p><i>(Aquí puedes escribir tu reflexión: viajaría solo, emprendería un negocio, aprendería a bailar, etc.)</i></p>
+    <p><i>(Viajaría solo, emprendería un negocio, aprendería a bailar, etc.)</i></p>
 
     <div class="footer">
         Página creada por: RAFAEL EDUARDO ZELAYA HERRERA
     </div>
 
 </body>
+
 </html>
